--- a/TestPrepation.csproj
+++ b/TestPrepation.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Data\ApplicationDbContext.cs" />
+    <Content Include="Data\Consts\Errors.cs" />
+    <Content Include="Data\Mappping\ProfileMapping.cs" />
+    <Content Include="Data\Models\Client.cs" />
+    <Content Include="Data\Models\ErrorViewModel.cs" />
+    <Content Include="Data\Models\MaritalStatus.cs" />
+    <Content Include="Data\ViewModels\ClientViewModel.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0">
